Complete Java 17 backporting and fix remaining API compatibility issues
Fixes all remaining compilation errors after removing Eclipse JDT from
target platform. Project now compiles successfully with 0 errors.

Changes:
- Backport remaining Java 21 List methods to Java 17:
  * List.removeFirst() → remove(0)
  * List.getLast() → get(size - 1)
  * List.removeLast() → remove(size - 1)
- Fix Stream collection: Collectors.collect(toList()) → toList()
- Fix String.indexOf(str, start, end) with substring approach
- Replace reflection-based Scanner instantiation with direct tokenizer
  usage via readToken() to populate comments
- Add initCommentMapper call to properly associate comments with AST nodes
- Use public setRestrictedIdentifierStartPosition methods directly
  instead of accessor wrappers (TypeDeclaration/RecordDeclaration)
- Fix javadoc unicode escape sequences to prevent compilation errors
- Improve null-safety in instanceof pattern matching

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>